src/formatter/snapshots/protols__formatter__clang__test__offset_to_position_cyrillic.snap
---
source: src/formatter/clang.rs
description: "message Test {\n  // Обратная совместимость: если true, применяет фильтры enabled_not_false и removed_not_true.\n  int32 x = 1;\n}\n"
expression: "Replacement::offset_to_position(i, c)"
info: 0
---
line: 0
character: 0
