src/formatter/snapshots/protols__formatter__clang__test__reading_xml.snap
---
source: src/formatter/clang.rs
expression: r
---
replacements:
  - offset: 56
    length: 1
    text: "\n  "
  - offset: 76
    length: 1
    text: "\n"
